weather info listview 구현

--- a/app/src/main/res/drawable/list_item_title_background.xml
+++ b/app/src/main/res/drawable/list_item_title_background.xml
@@ -4,4 +4,6 @@
     <stroke
         android:width="@dimen/item_background_stroke"
         android:color="@color/item_background_line" />
+
+    <solid android:color="@color/list_item_header_background"/>
 </shape>
