--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="item_background_stroke">@color/black</color>
+
+    <color name="list_item_header_background">#fafafa</color>
+    <color name="item_background_line">#e1e1e1</color>
 
     <color name="temp_degree">#FFFF0000</color>
     <color name="temp_degree_below_zero">#FF0000FF</color>
