--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,14 +2,24 @@
 <resources>
     <style name="text_title">
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">19sp</item>
+        <item name="android:textSize">17sp</item>
     </style>
     <style name="text_body">
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">13sp</item>
     </style>
     <style name="text_metadata">
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">13sp</item>
+        <item name="android:textSize">11sp</item>
+    </style>
+
+    <style name="weather_list_item_title">
+        <item name="android:background">@drawable/list_item_title_background</item>
+        <item name="android:padding">@dimen/padding_normal</item>
+    </style>
+
+    <style name="weather_list_item">
+        <item name="android:background">@drawable/list_item_background</item>
+        <item name="android:padding">@dimen/padding_normal</item>
     </style>
 </resources>
