--- a/app/src/main/res/layout/item_weather_list_header.xml
+++ b/app/src/main/res/layout/item_weather_list_header.xml
@@ -3,7 +3,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/list_header_height"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="7">
 
@@ -21,6 +21,7 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:gravity="center"
+            android:textStyle="bold"
             android:text="@string/today" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -29,6 +30,7 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:gravity="center"
+            android:textStyle="bold"
             android:text="@string/tomorrow" />
 
     </LinearLayout>
