--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
     <style name="weather_list_item_title">
         <item name="android:background">@drawable/list_item_title_background</item>
         <item name="android:padding">@dimen/padding_normal</item>
+        <item name="android:textSize">11sp</item>
     </style>
 
     <style name="weather_list_item">
