fix weather view

--- a/app/src/main/res/layout/view_weather_info.xml
+++ b/app/src/main/res/layout/view_weather_info.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.WeatherInfoView" >
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".view.WeatherInfoView">
 
     <data>
+
         <variable
             name="weather"
             type="com.roh.idus.localweather.domain.Weather" />
@@ -20,62 +20,63 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_normal"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/statusIcon"
-            app:layout_constraintEnd_toEndOf="parent" >
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/statusText"
+                style="@style/text_normal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{weather.state}"
-                style="@style/text_body"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:text="Hevy Rain"/>
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Hevy Rain" />
 
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/currentTemp"
+                style="@style/text_bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_normal"
                 android:text="@{@string/temp(weather.temp)}"
                 android:textColor="@{weather.temp >= 0? @color/temp_degree : @color/temp_degree_below_zero}"
-                style="@style/text_metadata"
-                app:layout_constraintTop_toBottomOf="@id/statusText"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/currentHumidity"
-                tools:text="4°C"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/statusText"
+                tools:text="4°C" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/currentHumidity"
+                style="@style/text_bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_normal"
                 android:text="@{@string/humidity(weather.humidity)}"
-                style="@style/text_metadata"
                 app:layout_constraintBottom_toBottomOf="@+id/currentTemp"
-                app:layout_constraintStart_toEndOf="@+id/currentTemp"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:text="93%"/>
+                app:layout_constraintStart_toEndOf="@+id/currentTemp"
+                tools:text="93%" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/statusIcon"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:adjustViewBounds="true"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/infoContainer"
+            android:scaleType="fitCenter"
             app:imageFromUrl="@{weather.icon}"
-            tools:src="@mipmap/ic_launcher"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/infoContainer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_max="@dimen/weather_icon_max_size"
+            tools:src="@mipmap/ic_launcher" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
