--- a/app/src/main/res/layout/item_weather_list.xml
+++ b/app/src/main/res/layout/item_weather_list.xml
@@ -11,9 +11,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="7">
+        android:layout_height="@dimen/list_item_height"
+        android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/weather_list_item"
