--- a/app/src/main/res/layout/item_weather_list_header.xml
+++ b/app/src/main/res/layout/item_weather_list_header.xml
@@ -4,8 +4,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="7">
+        android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/weather_list_item_title"
@@ -13,6 +12,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
+            android:textStyle="normal"
             android:text="@string/local" />
 
         <androidx.appcompat.widget.AppCompatTextView
