--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,11 +5,10 @@
     <dimen name="padding_normal">10dp</dimen>
 
     <dimen name="margin_normal">10dp</dimen>
+    <dimen name="margin_small">5dp</dimen>
 
     <dimen name="list_header_height">50dp</dimen>
+    <dimen name="list_item_height">80dp</dimen>
 
-    <dimen name="weather_list_weight_sum">7</dimen>
-    <dimen name="weather_list_weight_local">1</dimen>
-    <dimen name="weather_list_weight_today">3</dimen>
-    <dimen name="weather_list_weight_tomorrow">3</dimen>
+    <dimen name="weather_icon_max_size">45dp</dimen>
 </resources>
