--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="text_title">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">17sp</item>
-    </style>
-    <style name="text_body">
+    <style name="text_normal">
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">13sp</item>
+        <item name="android:textSize">11sp</item>
     </style>
-    <style name="text_metadata">
+    <style name="text_bold">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">11sp</item>
     </style>
 
-    <style name="weather_list_item_title">
+    <style name="weather_list_item_title" parent="text_bold">
         <item name="android:background">@drawable/list_item_title_background</item>
         <item name="android:padding">@dimen/padding_normal</item>
         <item name="android:textSize">11sp</item>
     </style>
 
-    <style name="weather_list_item">
+    <style name="weather_list_item" parent="text_normal">
         <item name="android:background">@drawable/list_item_background</item>
         <item name="android:padding">@dimen/padding_normal</item>
     </style>
