--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,17 +3,17 @@
     <style name="custom_toolbar">
         <item name="background">@android:color/transparent</item>
         <item name="titleTextColor">@android:color/black</item>
-        <item name="elevation">4dp</item>
+        <item name="elevation">@dimen/elevation_normal</item>
         <item name="theme">@style/ThemeOverlay.AppCompat.ActionBar</item>
     </style>
 
     <style name="text_normal">
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">11sp</item>
+        <item name="android:textSize">@dimen/text_size_normal</item>
     </style>
     <style name="text_bold">
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">11sp</item>
+        <item name="android:textSize">@dimen/text_size_normal</item>
     </style>
 
     <style name="weather_list_item_title" parent="text_bold">
