--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="toolbar_title">@color/black</color>
 
     <color name="list_item_header_background">#fafafa</color>
     <color name="item_background_line">#e1e1e1</color>
