--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
     <style name="custom_toolbar">
         <item name="background">@android:color/transparent</item>
-        <item name="titleTextColor">@android:color/black</item>
+        <item name="titleTextColor">@color/toolbar_title</item>
         <item name="elevation">@dimen/elevation_normal</item>
         <item name="theme">@style/ThemeOverlay.AppCompat.ActionBar</item>
     </style>
